--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "test" : "jest",
+    "test:watch" : "jest --watchAll",
+    "test:coverage" : "jest --coverage --colors"
   },
   "keywords": [],
   "author": "",
@@ -31,8 +34,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-jest": "^29.3.1",
     "cors": "^2.8.5",
     "date-fns": "^2.2.1",
+    "jest": "^29.3.1",
+    "jest-transform-stub": "^2.0.0",
     "materialize-css": "^1.0.0-rc.2"
   }
 }
